# x_bookmark

./: .gitignore  README.md  pyproject.toml
bookmarks_categorize/: config.py  database.py  main.py
bookmarks_categorize/db/: bookmarks.db
bookmarks_categorize/modules/: bookmark.py  crud.py  database.py
bookmarks_categorize/routers/: bookmark.py
scan_receipt/: app.py  main.py
scan_receipt/routers/: bookmark.py
